[package]
name = "guess_the_sharpe"
version = "0.1.3"
edition = "2024"
readme = "README.md"
license = "MIT"
keywords = []
categories = []
description = "Guess the Sharpe TUI game"
repository = "https://github.com/KGrewal1/guess_the_sharpes"
exclude = ["*.ipynb"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
compact_str = "0.9.0"
crossterm = "0.29.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
ratatui = "0.29.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"

[lints.clippy]
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
